<resources>

    <!--Activity Tags-->
    <string name="title_app_name">Journal App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign Up</string>

    <!-- Strings related to login and Register-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_username">Enter Username</string>
...

    <!--Request id token-->
    <string name="id_token"> 256355480187-kfrlopguafkgbkqdvh9ve12nc0nf6nfa.apps.googleusercontent.com</string>

    <!--Drawer Items-->
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="drawer_about">About</string>

    <string name="msg_sign_in_here">Have an Account?</string>
    <string name="msg_sign_up">Dont Have an Account?</string>
    <string name="title_register">Register</string>
    <string name="msg_or">OR</string>
...
