<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="1"
        android:title="@string/drawer_sign_out"
        android:visible="true"
        app:showAsAction="always" />

</menu>